--- a/src/adzone/locale/pt_BR/LC_MESSAGES/django.po
+++ b/src/adzone/locale/pt_BR/LC_MESSAGES/django.po
@@ -1,12 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# django-adzone Translation.
 #
-#, fuzzy
+# Copyright (C) 2010,
+# This file is distributed under the same license as the django-adzone package.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: v0.2a\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-29 02:14-0200\n"
 "PO-Revision-Date: 2010-10-29 02:09-0200\n"
