Changed Advertiser to 'Ad Provider', in an attempt to fix more adblock issues

--- a/src/adzone/locale/pt_BR/LC_MESSAGES/django.po
+++ b/src/adzone/locale/pt_BR/LC_MESSAGES/django.po
@@ -29,7 +29,7 @@ msgid "User"
 msgstr "Usuário"
 
 #: models.py:24 models.py:79
-msgid "Advertiser"
+msgid "Ad Provider"
 msgstr "Anunciante"
 
 #: models.py:25
