--- a/src/adzone/locale/ru/LC_MESSAGES/django.po
+++ b/src/adzone/locale/ru/LC_MESSAGES/django.po
@@ -27,7 +27,7 @@ msgid "Company Site"
 msgstr "Сайт компании"
 
 #: models.py:27
-msgid "Advertiser"
+msgid "Ad Provider"
 msgstr "Рекламодатель"
 
 #: models.py:28
